<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selectLevelRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/selectLevelBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/menu_bg"
        android:contentDescription="@string/menu_background" />


    <Button
        android:id="@+id/level1Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_level1"
        android:text="@string/level_1_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


    <Button
        android:id="@+id/level2Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/level1Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_level2"
        android:text="@string/level_2_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


    <Button
        android:id="@+id/level3Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/level2Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_level3"
        android:text="@string/level_3_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>
