<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/meuRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/menuBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/menu_bg"
        android:contentDescription="@string/menu_background" />


    <Button
        android:id="@+id/playButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn_play"
        android:backgroundTint="#BA9C9C"
        android:text="@string/play_game_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


    <Button
        android:id="@+id/selectLevelButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/playButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_selectlevel"
        android:text="@string/select_level_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


    <Button
        android:id="@+id/aboutButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/selectLevelButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_about"
        android:text="@string/about_label"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>
